--- a/codility/pom.xml
+++ b/codility/pom.xml
@@ -18,6 +18,12 @@
             <artifactId>commons-lang3</artifactId>
             <version>3.4</version>
         </dependency>
+        <dependency>
+            <groupId>com.googlecode.mp4parser</groupId>
+            <artifactId>isoparser</artifactId>
+            <version>1.1.21</version>
+        </dependency>
+
 
         <dependency>
             <groupId>junit</groupId>
@@ -25,6 +31,7 @@
             <version>4.12</version>
             <scope>test</scope>
         </dependency>
+
 
     </dependencies>
     <build>
