--- a/codility/pom.xml
+++ b/codility/pom.xml
@@ -23,6 +23,12 @@
             <artifactId>isoparser</artifactId>
             <version>1.1.21</version>
         </dependency>
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.10</version>
+        </dependency>
+
 
 
         <dependency>
