--- a/codility/pom.xml
+++ b/codility/pom.xml
@@ -28,8 +28,11 @@
             <artifactId>commons-codec</artifactId>
             <version>1.10</version>
         </dependency>
-
-
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk</artifactId>
+            <version>1.11.52</version>
+        </dependency>
 
         <dependency>
             <groupId>junit</groupId>
